-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.17.0, Lustre 2.16.1
-
3
-
9223372036854775807
The error ("manage") output does not correctly parse:
# lnetctl ping --timeout 1 10.73.20.2@tcp1,10.73.20.5@tcp1,10.73.10.1@tcp ping: - primary nid: 10.73.20.2@tcp1 Multi-Rail: False peer ni: - nid: 10.73.20.2@tcp1 manage: - ping: errno: -1 descr: failed to ping 10.73.20.5@tcp1: No route to host - ping: errno: -1 descr: failed to ping 10.73.10.1@tcp: Connection timed out
Should be:
# lnetctl ping --timeout 1 10.73.20.2@tcp1,10.73.20.5@tcp1,10.73.10.1@tcp ping: - primary nid: 10.73.20.2@tcp1 Multi-Rail: False peer ni: - nid: 10.73.20.2@tcp1 manage: - ping: errno: -1 descr: "failed to ping 10.73.20.5@tcp1: No route to host" - ping: errno: -1 descr: "failed to ping 10.73.10.1@tcp: Connection timed out"
The extra newlines aren't strictly an issue, just cosmetic, but the "descr" lines need to be quoted if they contain a colon (":") or begin with an at sign ("@")